# design/design.go
@@ -4,22 +4,31 @@ import (
 	. "goa.design/goa/v3/dsl"
 )
 
+type TextureType int
+
+const (
+	TaskCodeFieldName           = "texture_set_state"
+	TextureSetStateProcessing   = "processing"
+	TextureSetStateReady        = "ready"
+	TextureSetSubStateRendering = "rendering"
+
+	TextureTypeBaseMap TextureType = iota + 1
+	TextureTypeContourMap
+)
+
 var _ = Service("mktextr", func() {
 	Description("Texture store")
-
-	Method("getTextureById", func() {
-		Payload(func() {
-			Field(1, "id", String, "Texture ID")
-			Required("id")
-		})
-		Result(Empty)
-
+	Method("GetTaskQueue", func() {
 		HTTP(func() {
-			GET("/textures/{id}")
+			GET("/tasks")
+			Response(StatusOK)
+		})
+		Result(func() {
+			Attribute("tasks", ArrayOf(String))
 		})
 	})
-
 	Method("getTextureByCoordinates", func() {
+
 		HTTP(func() {
 			GET("/textures")
 
@@ -29,10 +38,10 @@ var _ = Service("mktextr", func() {
 			Param("y", Int, "Texture Y")
 
 			Response(StatusOK, func() {
-				Tag("status_code", "ok")
+				Tag(TaskCodeFieldName, TextureSetStateReady)
 			})
-			Response(StatusAccepted, func() {
-				Tag("status_code", "accepted")
+			Response(StatusPartialContent, func() {
+				Tag(TaskCodeFieldName, TextureSetStateProcessing)
 			})
 			Response(StatusBadRequest)
 		})
@@ -42,9 +51,7 @@ var _ = Service("mktextr", func() {
 			Field(1, "worldId", String, "WorldId")
 			Required("x", "y", "worldId")
 		})
-		Result(GetTextureByCoordinatesResponse, func() {
-			View("default")
-		})
+		Result(GetTextureByCoordinatesResponse)
 	})
 
 	Method("completeTask", func() {
@@ -52,11 +59,11 @@ var _ = Service("mktextr", func() {
 			Field(1, "file", Bytes, "The file to upload", func() {
 				Meta("struct:tag:encoding", "form")
 			})
-			Field(2, "filename", String, "Name of the file", func() {
+			Field(2, "extension", String, "ID of the task", func() {
 				Meta("struct:tag:encoding", "form")
 			})
 			Field(3, "taskId", String, "ID of the task")
-			Required("file", "filename", "taskId")
+			Required("file", "extension", "taskId")
 		})
 		Result(Empty)
 
@@ -68,20 +75,11 @@ var _ = Service("mktextr", func() {
 	})
 })
 
-var GetTextureByCoordinatesResponse = ResultType("application/get-result", func() {
+var GetTextureByCoordinatesResponse = Type("GetTextureByCoordinatesResponse", func() {
 	Description("Texture set payload")
-	Field(1, "status_code", String)
+	Attribute(TaskCodeFieldName, String, "")
+	Attribute("baseMapUrl", String, "")
+	Attribute("contourMapUrl", String, "")
+	Attribute("sub_state", String, "")
 
-	Attributes(func() {
-		Attribute("status_code", String)
-		Attribute("taskId", String, "")
-		Attribute("baseMapUrl", String, "")
-		Attribute("contourMapUrl", String, "")
-	})
-
-	View("default", func() {
-		Attribute("taskId", String, "")
-		Attribute("baseMapUrl", String, "")
-		Attribute("contourMapUrl", String, "")
-	})
 })
